compiler-core/src/parse/snapshots/gleam_core__parse__tests__list_spread_followed_by_extra_items.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 718
expression: "\npub fn main() -> Nil {\n  let xs = [1, 2, 3]\n  [1, 2, ..xs, 3 + 3, 4]\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:4:10
  │
4 │   [1, 2, ..xs, 3 + 3, 4]
  │          ^^^^ I wasn't expecting elements after this spread

A spread can only be used to prepend elements to lists like this: `[first, ..rest]`.

Hint: If you need to append elements to a list you can use `list.append`.
See: https://hexdocs.pm/gleam_stdlib/gleam/list.html#append
